--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '* * * * *'
+    - cron: '*/15 * * * * '
 jobs:
   build:
     runs-on: ubuntu-latest
