--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,4 +1,3 @@
-name: CRON JOB
 on:
   push:
     branches:
@@ -6,10 +5,15 @@ on:
   schedule:
     - cron: '*/15 * * * * '
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Running
         run: |
           echo "2+2=4 :)"
+  google:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+
+
