--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -15,5 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-        run: script.sh
+        run: |
+          script.sh
         shell: bash
