--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-        run: |
+      - run: |
           script.sh
         shell: bash
